# openapi/local-api.json
@@ -420,6 +420,7 @@
                 "stream": false,
                 "num_ctx": 131072,
                 "num_parallel": 1,
+                "n_gpu_layers": 40,
                 "cache_type_k": "q8_0",
                 "cache_type_v": "q8_0",
                 "dtype": "q8_0"
@@ -2391,6 +2392,9 @@
           "num_parallel": {
             "type": "integer"
           },
+          "n_gpu_layers": {
+            "type": "integer"
+          },
           "cache_type_k": {
             "type": "string"
           },
@@ -2741,6 +2745,10 @@
           "num_parallel": {
             "type": "integer",
             "minimum": 1
+          },
+          "n_gpu_layers": {
+            "type": "integer",
+            "minimum": 0
           },
           "cache_type_k": {
             "type": "string"
@@ -3923,6 +3931,9 @@
             "type": "integer"
           },
           "num_parallel": {
+            "type": "integer"
+          },
+          "n_gpu_layers": {
             "type": "integer"
           },
           "cache_type_k": {
